docs: improce create acc parameters description
